--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch-scatter==2.0.8
+torch-scatter -f https://data.pyg.org/whl/torch-1.11.0+cu113.html
 torchmetrics==0.4.1
 anytree==2.8.0
 optuna==2.9.1
